adding login and register

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                       <a class="nav-link" href="pages/business.html">Business</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="pages/sports.html">Sports</a>
+                      <a class="nav-link" href="#login">Login</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#"><i class="mdi mdi-magnify"></i></a>
@@ -744,6 +744,8 @@
         <main id="jqueryspapp" role="main">
           <section id="main_page" data-load="main_page.html" ></section>
           <section id="news_post" data-load="news_post.html"></section>
+          <section id="login" data-load="login.html"></section>
+          <section id="register" data-load="register.html"></section>
           <section id="view_3"><h1>view 3</h1></section>
           <section id="404"data-load="404.html"></section>
         </main>
