adding minor visual changes to the project login and register

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       rel="stylesheet"
       href="./assets/vendors/owl.carousel/dist/assets/owl.theme.default.min.css"
     />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    
 
 
 
@@ -136,7 +138,7 @@
                       <a class="nav-link" href="pages/business.html">Business</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#login">Login</a>
+                      <a class="nav-link" href="login.html">Logout</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#"><i class="mdi mdi-magnify"></i></a>
@@ -746,7 +748,6 @@
           <section id="news_post" data-load="news_post.html"></section>
           <section id="login" data-load="login.html"></section>
           <section id="register" data-load="register.html"></section>
-          <section id="view_3"><h1>view 3</h1></section>
           <section id="404" data-load="404.html"></section>
         </main>
         <!-- main-panel ends -->
