--- a/login.html
+++ b/login.html
@@ -39,11 +39,13 @@
                                         <input id="password" class="form-control" placeholder="Password" name="password" type="password" value="">
                                     </div>
                                     <div class="form-group">
-                                      <button id="login-link" onclick="doLogin();" class="btn btn-lg btn-success btn-block">Login</button>
+                                      <button id="login-link" onclick="doLogin();" class="btn btn-lg btn-primary btn-block">Login</button>
                                     </div>
+                                   
                                     
                                 </fieldset>
                             </form>
+                            <a href="register.html"> <button id="login-link"  class="btn btn-lg btn-success btn-block">Register</button></a>
                         </div>
                     </div>
                 </div>
@@ -54,6 +56,13 @@
         <script src="./assets/js/jquery.min.js"></script>
         <!-- Bootstrap Core JavaScript -->
         <script src="./assets/js/bootstrap.min.js"></script>
+
+
+
+        <script src="./assets/js/utils.js"></script>
+        <!--<script src="./assets/js//controllers/login.js"></script>-->
+
+
         <!-- Toastr JS -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
@@ -64,7 +73,7 @@
                      'password' : $('#password').val()
                 }
                 $("login-link").prop('disabled', true);
-                $.post("http://localhost:8082/BenjaminKrehicProjectWeb/api/login", login_info).done(function(data){
+                $.post("api/login", login_info).done(function(data){
                     console.log(data.token);
                     window.localStorage.setItem("token", data.token);
                     window.location = "index.html";
