--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
                                         <input id="password" class="form-control" placeholder="Password" name="password" type="password" value="">
                                     </div>
                                     <div class="form-group">
-                                      <button id="login-link" onclick="doLogin();" class="btn btn-lg btn-primary btn-block">Login</button>
+                                      <button id="login-link" onclick="doLogin();" class="btn btn-lg btn-primary btn-block" type="button">Login</button>
                                     </div>
                                    
                                     
