--- a/register.html
+++ b/register.html
@@ -33,16 +33,16 @@
                             <form id="register-form" role="form">
                                 <fieldset>
                                     <div class="form-group">
-                                        <input id="email" class="form-control" placeholder="E-mail" name="email" type="email" autofocus required>
+                                        <input id="email" class="form-control" placeholder="E-mail" name="email" type="email" autofocus required />
                                     </div>
                                     <div class="form-group">
-                                        <input id="username" class="form-control" placeholder="Username" name="username" type="text" autofocus required>
+                                        <input id="username" class="form-control" placeholder="Username" name="username" type="text" autofocus required />
                                     </div>
                                     <div class="form-group">
-                                        <input id="password" class="form-control" placeholder="Password" name="password" type="password" value="" required>
+                                        <input id="password" class="form-control" placeholder="Password" name="password" type="password" value="" required />
                                     </div>
                                     <div class="form-group">
-                                      <button id="register-link" onclick="doRegister();" class="btn btn-lg btn-success btn-block" type="button">Register</button>
+                                      <button id="register-link" class="btn btn-lg btn-success btn-block" type="submit">Register</button>
                                     </div>
                                     
                                 </fieldset>
@@ -67,6 +67,10 @@
 
 
         <script type="text/javascript">
+                $("#register-form").on("submit", function(e){
+                    e.preventDefault();
+                   doRegister();
+                });
            function doRegister(){
                 var register_info = {
                     'email' : $('#email').val(),
