--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
             var search = {
               'search' : $('#search').val()
             }
-            localStorage.setItem("seatch", search.search);
+            localStorage.setItem("search", search.search);
             window.location = "#search_page";
           }
   </script>
