--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <link rel="stylesheet" href="./assets/css/login.css">
 
 
+    <!-- DataTable CSS -->
+    <link href="./assets/css/dataTables/dataTables.bootstrap.css" rel="stylesheet">
+    <link href="./assets/css/dataTables/dataTables.responsive.css" rel="stylesheet">
 
 
 
@@ -831,6 +834,12 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="assets/js/jQuerySPApp.js"></script>
     <script src="assets/js/utils.js"></script>
+
+
+    <script src="//cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+    <script src="./assets/js/dataTables/jquery.dataTables.min.js"></script>
+    <script src="./assets/js/dataTables/dataTables.bootstrap.min.js"></script>
+    <script src="//cdn.datatables.net/responsive/2.2.7/js/dataTables.responsive.min.js"></script>
 
 
 
