fix bugs on tag render and function name

--- a/index.html
+++ b/index.html
@@ -863,6 +863,7 @@
         onReady: function() { 
           getArticle(localStorage.getItem("article_id"));
           getImages(localStorage.getItem("article_id"));
+          getTags(localStorage.getItem("article_id"));
           getComments(localStorage.getItem("article_id"));
             
          }
