adding admin routes for image adding and tag adding

--- a/index.html
+++ b/index.html
@@ -731,6 +731,9 @@
           <section id="business" data-load="business.html" ></section>
           <section id="search_page" data-load="search_page.html" ></section>
           <section class="admin" id="admin" data-load="admin.html" ></section>
+          <section class="admin" id="admin-article" data-load="admin-article.html" ></section>
+          <section class="admin" id="admin-images" data-load="admin-images.html" ></section>
+          <section class="admin" id="admin-tags" data-load="admin-tags.html" ></section>
           <section id="404" data-load="404.html"></section>
         </main>
         <!-- main-panel ends -->
