fixing imports for toast

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
     />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/login.css">
-
-
+    <!-- TOASTER CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet"/>
+  >
+  
     <!-- DataTable CSS -->
     <link href="./assets/css/dataTables/dataTables.bootstrap.css" rel="stylesheet">
     <link href="./assets/css/dataTables/dataTables.responsive.css" rel="stylesheet">
@@ -841,14 +843,17 @@
     <script src="assets/js/utils.js"></script>
 
 
-    <script src="//cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
     <script src="./assets/js/dataTables/jquery.dataTables.min.js"></script>
     <script src="./assets/js/dataTables/dataTables.bootstrap.min.js"></script>
-    <script src="//cdn.datatables.net/responsive/2.2.7/js/dataTables.responsive.min.js"></script>
+    <script src="https://cdn.datatables.net/responsive/2.2.7/js/dataTables.responsive.min.js"></script>
 
 
 
     <!-- End custom js for this page-->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.js"></script>
+    
   </body>
 
 
